--- a/src/LocProject.json
+++ b/src/LocProject.json
@@ -44,6 +44,12 @@
           "LclFile": "src\\Microsoft.Kusto.ServiceLayer\\Localization\\LCL\\{Lang}\\sr.xlf.lcl",
           "CopyOption": "LangIDOnName",
           "OutputPath": "src\\Microsoft.Kusto.ServiceLayer\\Localization\\transXliff"
+        },
+        {
+          "SourceFile": "src\\Microsoft.SqlTools.SqlCore\\Localization\\sr.xlf",
+          "LclFile": "src\\Microsoft.SqlTools.SqlCore\\Localization\\LCL\\{Lang}\\sr.xlf.lcl",
+          "CopyOption": "LangIDOnName",
+          "OutputPath": "src\\Microsoft.SqlTools.SqlCore\\Localization\\transXliff"
         }
       ]
     }
