--- a/publishSqlCoreProject.yml
+++ b/publishSqlCoreProject.yml
@@ -33,7 +33,7 @@ steps:
   displayName: 'dotnet pack src/Microsoft.SqlTools.SqlCore'
   inputs:
     command: pack
-    projects: src/Microsoft.SqlTools.SqlCore
+    packagesToPack: '**/*/Microsoft.SqlTools.SqlCore.csproj'
     arguments: -IncludeReferencedProjects
 
 - task: DotNetCoreCLI@2
