--- a/publishSqlCoreProject.yml
+++ b/publishSqlCoreProject.yml
@@ -3,7 +3,7 @@
 # Add steps that publish symbols, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/apps/aspnet/build-aspnet-4
 
-name: $(Year:yyyy).$(Month).$(DayOfMonth).$(Rev:.r)
+name: $(BuildDefinitionName)_$(Year:yyyy).$(Month).$(DayOfMonth)$(Rev:.r).
 
 trigger:
 - main
