--- a/publishSqlCoreProject.yml
+++ b/publishSqlCoreProject.yml
@@ -42,8 +42,7 @@ steps:
 - task: DotNetCoreCLI@2
   displayName: 'dotnet publish src/Microsoft.SqlTools.SqlCore'
   inputs:
-   command: 'publish'
-   publishWebProjects: false
+   command: 'push'
    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/Microsoft.SqlTools.SqlCore.*.nupkg'
    nuGetFeedType : internal
    publishVstsFeed: 'CrossPlatBuildScripts/mssqltools'
