--- a/publishSqlCoreProject.yml
+++ b/publishSqlCoreProject.yml
@@ -44,4 +44,4 @@ steps:
   inputs:
    command: 'push'
    packagesToPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
-   feedPublish: 'mssqltools/mssqltools'
+   feedPublish: 'CrossPlatBuildScripts/mssqltools'
