--- a/src/Microsoft.SqlTools.Credentials/Microsoft.SqlTools.Credentials.csproj
+++ b/src/Microsoft.SqlTools.Credentials/Microsoft.SqlTools.Credentials.csproj
@@ -18,6 +18,7 @@
         This is a Diagnostic Alert .NET 7 onwards.Changing to LibraryImportAttribute would require additional code changes,
         therefore this warning is suppressed.-->
         <NoWarn>$(NoWarn);SYSLIB1054</NoWarn>
+        <TargetFramework>net7.0</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
         <Compile Include="**\*.cs" Exclude="**/obj/**/*.cs" />
