--- a/src/Microsoft.SqlTools.Shared/Microsoft.SqlTools.Shared.csproj
+++ b/src/Microsoft.SqlTools.Shared/Microsoft.SqlTools.Shared.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<TargetFramework>net7.0</TargetFramework>
 	</PropertyGroup>
 
 </Project>
