--- a/azure-pipelines/publish-sqlcore.yml
+++ b/azure-pipelines/publish-sqlcore.yml
@@ -1,16 +1,3 @@
-# ASP.NET
-# Build and test ASP.NET projects.
-# Add steps that publish symbols, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/apps/aspnet/build-aspnet-4
-
-name: $(Year:yyyy).$(Month).$(DayOfMonth)$(Rev:.r)
-
-trigger:
-- main
-
-pool:
-  vmImage: 'windows-latest'
-
 variables:
   solution: '**/*.sln'
   buildPlatform: 'Any CPU'
@@ -36,12 +23,15 @@ steps:
   inputs:
     command: pack
     packagesToPack: 'src/Microsoft.SqlTools.SqlCore/Microsoft.SqlTools.SqlCore.csproj'
-    versioningScheme: 'byBuildNumber'
+    versioningScheme: 'byPrereleaseNumber'
     arguments: -IncludeReferencedProjects
+    majorVersion: $(Major)
+    minorVersion: $(Minor)
+    patchVersion: $(Patch)$(Rev:.r)
 
 - task: DotNetCoreCLI@2
   displayName: 'dotnet push src/Microsoft.SqlTools.SqlCore'
   inputs:
    command: 'push'
-   packagesToPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
+   packagesToPush: '$(Agent.TempDirectory)/Microsoft.SqlTools.SqlCore.*.nupkg'
    feedPublish: 'mssqltools'
