only releasing when release is true

--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -308,6 +308,7 @@ steps:
 
 - task: DotNetCoreCLI@2
   displayName: 'NuGet push SqlCore'
+  condition: eq(variables['RELEASE'], 'true')
   inputs:
     command: push
     packagesToPush: '$(Build.SourcesDirectory)/artifacts/nugetPackages/**/Microsoft.SqlTools.SqlCore.*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
