--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -293,13 +293,13 @@ steps:
     ArtifactName: 'logs'
   condition: true
 
-- task: DotNetCoreCLI@2
+- task: NuGetCommand@2
   displayName: 'NuGet push'
   condition: eq(variables['PUSH_SYMBOLS'], 'true')
   inputs:
     command: push
     packagesToPush: '$(Build.SourcesDirectory)/artifacts/nugetPackages/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
-    feedPublish: 'mssqltools'
+    publishVstsFeed: '2191dd5f-4aec-491b-ac50-568bbc331c8a'
     allowPackageConflicts: true
 
 - task: DotNetCoreCLI@2
