--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -12,6 +12,7 @@
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>SQL XPLAT</PackageTags>
 		<DebugType>portable</DebugType>
+		<Authors>Microsoft</Authors>
 		<!-- add Source Link info to package/pdbs-->
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 	</PropertyGroup>
