--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -228,7 +228,7 @@ steps:
   inputs:
     ConnectedServiceName: 'Code Signing'
     FolderPath: '$(Build.SourcesDirectory)/src/Microsoft.SqlTools.SqlCore/bin/$(buildConfiguration)/netstandard2.0'
-    Pattern: '**/*.dll'
+    Pattern: '*.dll'
     signConfigType: inlineSignParams
     inlineOperation: |
      [
