--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -228,7 +228,7 @@ steps:
   inputs:
     ConnectedServiceName: 'Code Signing'
     FolderPath: '$(Build.SourcesDirectory)/src/Microsoft.SqlTools.SqlCore/bin/$(buildConfiguration)/netstandard2.0'
-    Pattern: '*.dll'
+    Pattern: 'Microsoft.SqlTools.SqlCore.*.dll'
     signConfigType: inlineSignParams
     inlineOperation: |
      [
@@ -282,7 +282,7 @@ steps:
     command: custom
     custom: pack
     arguments: '--output $(Build.SourcesDirectory)\artifacts\nugetPackages --no-build --configuration $(buildConfiguration) -v n src\Microsoft.SqlTools.SqlCore\Microsoft.SqlTools.SqlCore.csproj'
-    
+
 - task: BatchScript@1
   displayName: 'Package nuspec projects'
   inputs:
