--- a/src/Microsoft.SqlTools.SqlCore/Microsoft.SqlTools.SqlCore.nuspec
+++ b/src/Microsoft.SqlTools.SqlCore/Microsoft.SqlTools.SqlCore.nuspec
@@ -4,7 +4,7 @@
     <id>Microsoft.SqlTools.SqlCore</id>
     <version>1.0.0</version>
     <authors>Microsoft</authors>
-    <requireLicenseAcceptance>true</requireLicenseAcceptance>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Provides core SQL functionality for SQL server editors like Object explorer, Query Execution and Scripting</description>
     <dependencies>
       <dependency id="Microsoft.SqlServer.SqlManagementObjects" version="170.12.0" />
