--- a/src/Microsoft.SqlTools.SqlCore/Microsoft.SqlTools.SqlCore.csproj
+++ b/src/Microsoft.SqlTools.SqlCore/Microsoft.SqlTools.SqlCore.csproj
@@ -44,7 +44,7 @@
 		<InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
 	</ItemGroup>
 	<ItemGroup>
-		<_PackageFiles Include="$(OutputPath)\**\Microsoft.SqlTools.Hosting.*dll">
+		<_PackageFiles Include="$(OutputPath)\**\*.dll">
 		  <BuildAction>None</BuildAction>
 		  <PackagePath>lib\netstandard2.0\</PackagePath>
 		</_PackageFiles>
